0.51

 * Better Makefile.PL.

0.50 2018-04-17

 * Fix t/option_l.t to match changes in Math::BigInt.

 * The tests now require Test::More version 0.88 or newer.

 * New MANIFEST.SKIP file based on the template in the ExtUtils-Manifest
   distribution.

 * Format CHANGES according to CPAN::Changes::Spec.

 * Add test files t/release-test-version.t, t/release-portability.t, and
   t/release-cpan-changes.t.

 * Convert test file t/02pod.t to t/release-pod.t and t/03podcov.t to
   t/release-pod-coverage.t.

0.49 2018-02-03 pjacklam

 * Improve specification of required modules in Makefile.PL.

 * Fix typo in CHANGES file.

0.48 2018-01-31 pjacklam

 * According to the CPAN testers reports, Perl v5.10 or later is required, so
   make Perl v5.10 the minimum required version.

 * Verify that CPAN RT #102006 is fixed.

0.47 2016-12-13 pjacklam

 * Add more logic to Makefile.PL regarding INSTALLDIRS (CPAN RT #119199
   and #119225).

0.46 2016-12-11 pjacklam

 * Fix Makefile.PL so that this module installs over the core version.

0.45 2016-12-03 pjacklam

 * Use ExtUtils::MakeMaker rather than Module::Install in Makefile.PL

 * Remove INSTALL file. The information is in the README file.

 * Improve documentation in BUGS and SUPPORT sections in POD in bignum.pm,
   bigint.pm, and bigrat.pm.

 * Remove unused variables in Math/BigInt/Trace.pm and Math/BigFloat/Trace.pm

 * Update README and BUGS files.

 * Remove code that was accidentally left in t/infnan.inc after debugging.

 * Remove author information in LICENSE file.

 * Trim whitespace.

 * CHANGES file now has the same formatting as other Math::BigInt-related
   distributions.

0.44 2016-11-15 pjacklam

 * Update bundled Module::Install from version 1.16 to version 1.17.

 * Replace function calls with method calls.

 * Include patch for CPAN RT #116506.

0.43 2016-07-09 pjacklam

 * Replace function calls with method calls.

0.42 2016-01-05 pjacklam

 * "use strict" and "use warnings" everywhere.
